try to fix video on mobile

--- a/scss/media.scss
+++ b/scss/media.scss
@@ -224,11 +224,26 @@
 		margin-bottom: 50px;
 
 		.c-connection-video--mobile {
-			display: block !important;
 			position: absolute;
 			top: 60px;
 			left: 10px;
 			width: calc(100% - 20px);
+		}
+
+		.c-connection-video--loop {
+			opacity: 1;
+
+			&.hide {
+				opacity: 0;
+			}
+		}
+
+		.c-connection-video--no-loop {
+			opacity: 0;
+
+			&.show {
+				opacity: 1;
+			}
 		}
 
 		.c-hito-orange {
